--- a/server/package.json
+++ b/server/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.8.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.11.18",
