--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,13 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.7",
+    "axios": "^1.3.2",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.8.1",
+    "redux": "^4.2.1",
+    "redux-saga": "^1.2.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
