--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.7",
+    "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.2",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
@@ -26,5 +27,6 @@
     "@vitejs/plugin-react": "^3.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
