--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,8 @@
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^6.8.1",
-    "redux": "^4.2.1",
-    "redux-saga": "^1.2.2"
+    "react-redux": "^8.0.5",
+    "react-router": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
