--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.8",
     "react-redux": "^8.0.5",
     "react-router": "^6.8.1"
   },
