--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,21 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.7",
     "@reduxjs/toolkit": "^1.9.2",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.2",
     "http-proxy-middleware": "^2.0.6",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.8",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
-    "react-router": "^6.8.1"
+    "react-router-dom": "^6.8.2",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
