--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.8",
     "react-icons": "^4.7.1",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "sort-by": "^1.2.0"
