--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "@reduxjs/toolkit": "^1.9.2",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.2",
+    "highcharts": "^10.3.3",
+    "highcharts-react-official": "^3.2.0",
     "http-proxy-middleware": "^2.0.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
