--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
+    "react-select": "^5.7.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
